<resources>
    <string name="app_name">tip calculator</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="_15">15%</string>
    <string name="tip">Tip</string>
    <string name="_0_00">0.00</string>
    <string name="total">Total</string>
    <string name="_0_000">0.00</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string-array name="spinner_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>