<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content">

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#2196F3"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:padding="12dp"

        android:textColorHint="#212121" />

    <TextView
        android:id="@+id/tv_percent"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/_15"
        android:textSize="16sp"
        android:layout_marginStart="11dp"/>

    <SeekBar
        android:id="@+id/sb_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="12dp"
        android:max="30"
        android:progress="15" />

    <TextView

        android:text="@string/tip"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="16dp"
        android:layout_marginEnd="50sp"
        android:background="#73CEFF"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/_0_00"
        android:textColor="#004D40"
        android:textSize="16sp" />

    <TextView
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:text="@string/total"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/tv_total"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnWeight="1.2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="16dp"
        android:background="#FF9800"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/_0_000"
        android:textColor="#004D40"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Amount Per Person"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/perPerson"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="16dp"
        android:background="#FF9800"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/_0_000"
        android:textColor="#004D40"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Peopletotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_marginEnd="-5dp"
        android:text="Total per person"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/NumbOfP"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_marginStart="60dp"
        android:minHeight="48dp" />
    <TextView
        android:id="@+id/roundamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_marginEnd="-5dp"
        android:text="Round Amount"
        android:textSize="16sp"/>

    <RadioGroup

        android:id="@+id/radioGroup"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_marginTop="0dp"
            android:text="None"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/Tip"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_marginTop="0dp"
            android:text="Tip"
            android:textSize="16sp"
            android:textStyle="bold" />



    <RadioButton
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_marginTop="0dp"
        android:text="Total"
        android:textSize="16sp"
        android:textStyle="bold" />


    </RadioGroup>
</GridLayout>
</ScrollView>
